controller/test/e2e/testdata/daemonset/daemonset.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: daemonset-gateway
  namespace: agentgateway-base
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: workload-kind-daemonset
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
